// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for Calliper's identifyUser destination action: all fields 1`] = `
Object {
  "companyId": "DkRaM5*S9%%xM*30",
  "key": "DkRaM5*S9%%xM*30",
  "user": Object {
    "anonymous_id": "DkRaM5*S9%%xM*30",
    "created_at": "2021-02-01T00:00:00.000Z",
    "email": "nofhi@covareje.ga",
    "first_name": "DkRaM5*S9%%xM*30",
    "last_name": "DkRaM5*S9%%xM*30",
    "name": "DkRaM5*S9%%xM*30",
    "phone": "DkRaM5*S9%%xM*30",
    "time": 1612137600000,
    "traits": Object {
      "testType": "DkRaM5*S9%%xM*30",
    },
    "user_id": "DkRaM5*S9%%xM*30",
  },
}
`;

exports[`Testing snapshot for Calliper's identifyUser destination action: required fields 1`] = `
Object {
  "companyId": "DkRaM5*S9%%xM*30",
  "key": "DkRaM5*S9%%xM*30",
  "user": Object {
    "anonymous_id": "DkRaM5*S9%%xM*30",
    "time": 1612137600000,
    "traits": Object {},
    "user_id": "DkRaM5*S9%%xM*30",
  },
}
`;
